# image-studio

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/macros/: defect_pixels.ijm  measure.ijm  particles.ijm  profile.ijm
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/job/: mod.rs
src-tauri/src/macrogen/: mod.rs
src-tauri/src/runner/: mod.rs
src-tauri/src/settings/: mod.rs
