[package]
name = "image-studio"
version = "0.4.2"
description = "Cross-platform image analysis platform with ImageJ/Fiji engine support"
authors = ["Image Studio"]
edition = "2021"

[lib]
name = "image_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
once_cell = "1"
base64 = "0.22"
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg", "tiff"] }
